# recipes

./: .dockerignore  .editorconfig  .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml
.devops/docker/: Dockerfile  docker-compose.override.yml.example  entrypoint.sh  start.sh
.envs/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: run_tests.yml
backend/: Makefile  classify.py  pyproject.toml  setup.cfg
backend/apps/ingredients/: models.py  serializers.py  urls.py  views.py
backend/apps/ingredients/migrations/: 0001_initial.py
backend/apps/recipes/: models.py  serializers.py  urls.py  views.py
backend/apps/recipes/migrations/: 0001_initial.py  0002_auto_20210330_2118.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: exception_handler.py  urls.py
backend/config/settings/: base.py  local.py
